syntax = "proto3";

option csharp_namespace = "Demo.Grpc";
package demo;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GreetManyTimes (HelloRequest) returns (stream HelloReply); // serverside event kind of (SSE)
}

// Store 100 records in. customer table ..

// When hit GetAllCustomers(CustomerRequest)returns (stream CustomerResponse) --> 100 customers but as a stream